# ChangeLog for media-libs/libffado
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libffado-2.2.1-r2 (26 Mar 2015)

  26 Mar 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +libffado-2.2.1-r2.ebuild, libffado-9999.ebuild,
  +files/libffado-2.2.1-mixer.patch:
  patch away automagic dependency on PyQt4 and friends
  depend on qt4? ( xdg-utils ) too as it is an automagic dependency

  22 Mar 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  libffado-2.2.1-r1.ebuild, libffado-9999.ebuild,
  -files/libffado-2.2.1-detect-userspace.patch,
  +files/libffado-2.2.1-detect-userspace-env.patch:
  update userspace detection patch applied upstream

*libffado-9999 (19 Mar 2015)
*libffado-2.2.1-r1 (19 Mar 2015)

  19 Mar 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +libffado-2.2.1-r1.ebuild, +libffado-9999.ebuild, -libffado-9999-r1.ebuild,
  +files/libffado-2.2.1-detect-userspace.patch:
  patch to avoid detecting userspace (patch sent upstream), thanks to Maurizio
  Berti for reporting
  sort inherits lexically
  revert live revision

  15 Dec 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -libffado-2.1.0-r1.ebuild, libffado-2.2.1.ebuild, libffado-9999-r1.ebuild,
  -files/libffado-2.1.0, -files/libffado-2.1.0-no-jackd-version.patch,
  -files/libffado-2.1.0/0001-honour-toolchain-env.patch,
  -files/libffado-2.1.0/0002-remove-O2.patch,
  +files/libffado-2.2.1-flags.patch, +files/libffado-2.2.1-jack-detect.patch,
  -files/libffado-9999, -files/libffado-9999-no-jackd-version.patch,
  -files/libffado-9999/0001-honour-toolchain-env.patch,
  -files/libffado-9999/0003-remove-O2.patch:
  removed old ebuild
  good patches applied upstream, backported ones used for version 2.2.1
  make ebuilds almost identic
  remove version specifiers from deps as there are no older version in tree
  depend on dev-libs/libconfig[cxx]
  depend on dev-python/PyQt4[dbus]
  make sure PYTHON_REQUIRED_USE is used properly
