@@ -5,7 +5,8 @@ AUX libffado-2.2.1-mixer.patch 4002 SHA256 f7c2f333f8d6b6cd46d7a48e384769a8c345e
 DIST libffado-2.2.1.tgz 1227685 SHA256 9f299b8ecd9885338aeae8c7f2fc10af9afb85ca4384256d485b010a128b35f6 SHA512 310741703912dd273458d0ecc4aca43af1735e15a19704e39b0c660212a34875e9c6086a325914d70d2373ff56b888acb4d925778db8cc3b9b2e8866e0a7b042 WHIRLPOOL ce03c47121a1afa85ed5120e1e77aa5d94dbf49129201a894c4523c8abd07d5d6485fbb68819ef522afd5a987416098ef6f95ab8984f62c325be735833136d22
 EBUILD libffado-2.2.1-r1.ebuild 2230 SHA256 d471852817183c1a6af13db9f32c6773083261453a51b9e220732c39c7f5c318 SHA512 8af5c1775be97cc0ef860065c94ab7f6606bb8f614e62cfa510e77beae0e0097a04eb8bb8689f5ca4ffd649662ee8735670c040ff04881da30a6655647c08c54 WHIRLPOOL 43109ebde0f7b4dc826044cf467edb979ede1498443c01c193ed3d90c9b3da28f96d1445577e998c7ae556070393041a505e6e0789338f257f36fedd93eb2338
 EBUILD libffado-2.2.1-r2.ebuild 2325 SHA256 f4d25080f79bd707063f583d7a8ee3973593ca2dc01b67644aa95c0868e901ac SHA512 e5fc13c725ce35ca0cb85d8b7998baef5455b03864cf2a0ffe285880a1b179dda735389c617f2d86f478b4d21f2018d071d81aaa9b906c3802581c4aa19d3b6e WHIRLPOOL e9ef6bfd53d51d69b0b0adc10da0c891c299030943497baceb2cac7c4c79fbc06b34ed281008fd38ba3a2e27b7288beba95c31c8642407f7dd6ac0160f588bee
+EBUILD libffado-2.2.1-r3.ebuild 2731 SHA256 b4809fa708c896b2d80bff82d4780eb3c27c513cf2ebadaa043ef9c8f3430318 SHA512 2f5409b0e87ad968cfdfe389b8ac0043ac733a29698ba333b80d791ad411028f607e46d40c034257b369ec659a1096047c500337d383ab07d14b84db4116907a WHIRLPOOL 906c9d097d697c78329de012f023884adc75c3928478e90684e7e60a10ec1660fcff3b08d7b0fe5589c5dc6db1ae430bc8c6efa78bc20edde51e25a64316eec6
 EBUILD libffado-2.2.1.ebuild 2154 SHA256 9600223a859ff36bc43b43d3387a94ec1699235852d1ce675e832b795bfa41aa SHA512 b531cefdfb3a4f3c7ad4d664e17fb33143893b3d362f1b3957640ca820e9b3cbe9be265f082a6cd1cc9a847c24e4fcdc6dcbbf39fe5bb441904b4fd7aecc3490 WHIRLPOOL 71c088f84a13bed9274ff8e9e53c713cb9c11ce2f0c36567d07749985fa778f40f30b2dba0d353c1f0680c6c9eff59ccbcdcd4cecdb34e59ae30bf7404b1f787
-EBUILD libffado-9999.ebuild 2215 SHA256 727e5cac1a9bffca66e8986b86b14d4310faca67f3dbe884be87c8ef80d15f0c SHA512 060140507a62a2adbbd7f36c1057e29858c62af72c35fe6255788e57830448d90c655407f8cf1ee8f3e0b6ab309303e2b292cc0d5d654eca4ddbf6b4a1a7996c WHIRLPOOL 1b5f239a8a64363217e13de18d65f4ebe676d90023b47f20ace4c72458adf8b830d74b22044c94318dc6e4fa9fabd5585d6d3e4e1e3ee8c343f8f43c51dc46ea
-MISC ChangeLog 5737 SHA256 ed8ffbebdf1e4b79bf70829dc08af6db01c760a81faaf7bbcd02c815f92829ea SHA512 32ea441d6107e84b27d2b4474035dfb259089a80be86e87a2858912e88b97564ee2691063fa5406da658f24386905fb23e57845ca2a950a296b64303aaf5a5a9 WHIRLPOOL 09b8837bfea9e5dcc98eae94f73e0848a0c1f22c9cd0d23dd0ce6c4288673239e39b9743e523f527f6e824387765f7a758a52af51d991fce5ff08bff8f5b56ce
+EBUILD libffado-9999.ebuild 2569 SHA256 1fc02145aadf0caec190ed3ea2507588e2ed7bcc9d9a800a5b06d464dc3799a3 SHA512 5ba672275102b1d0b045a465d9fe0e1dfc53a9f5d14cb6401121dc40e4c08bc7d1ff9abcc6743d218ef9b0667304a3bcd0661dd61bb1b7b59ee0e3b9c93d6b4f WHIRLPOOL 810bdfdf813302236a6ba59cacd92f56cdf3cac8693265d537b1d33993f06485b132a17de56d5a188706fa90722ae22c6df24b8e67aa2cd959f99fcb2de207fa
+MISC ChangeLog 5997 SHA256 846c6fdb1c0d03a7fa9a89b6ea6436ce03b859ff9ac48a9202da5d9e0f0c0bb4 SHA512 78f04eba11b2f17ab37de4497d4f1bc58b7a8ef7879224211bc55c382333581e7730f488097f0465d6b24d69d1dc02d1c91a3e63963ac816cb8e5a1a4c2439de WHIRLPOOL b2c17153c1fb9462199df56dcbff4568e1258f1f6eb467a56fa83d16c095ceb6ca0dd90dce1042a82d557d49e9265e397810c419df21010c2c0e5cb5b51de294
 MISC metadata.xml 353 SHA256 608a4a6b28282ff02bda855731c407ccec16d907de90968b75241be123780a64 SHA512 f0399d9fbe3ffcd86066d1442c7a9dd178ac7601dea53280b6bd570bc5a839f4e63051b6bdd04d38c58a5edd6a39dac33af90b82bf46c633516d9ec3a5ee78b9 WHIRLPOOL a75323edc62d5cc245791c7d0cd56d16827d8f8778932c862684cbe59295821339ada5a3ed8a26de27a61f7f7c8ab0df8391efc4c42c608406314d9c579fad72
