@@ -2,6 +2,14 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libffado-2.2.1-r3 (12 Apr 2015)
+
+  12 Apr 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  +libffado-2.2.1-r3.ebuild, libffado-9999.ebuild:
+  multilib conversion
+  drop base eclass
+  run python_fix_shebang after installation instead of before build
+
 *libffado-2.2.1-r2 (26 Mar 2015)
 
   26 Mar 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
